<resources>
    <string name="app_name">OpenVPN TAP Bridge</string>
    
    <!-- Main Activity -->
    <string name="status_title">Interface Status</string>
    <string name="interface_label">Interface:</string>
    <string name="status_label">Status:</string>
    <string name="status_up">UP</string>
    <string name="status_down">DOWN</string>
    <string name="carrier_label">Carrier:</string>
    <string name="carrier_on">Carrier On</string>
    <string name="carrier_off">Carrier Off</string>
    <string name="bridge_label">Bridge:</string>
    <string name="in_bridge">In %s</string>
    <string name="not_in_bridge">Not Bridged</string>
    <string name="default_route_label">Default Route:</string>
    <string name="is_default_route">Yes</string>
    <string name="not_default_route">No</string>
    <string name="speed_title">Network Speed</string>
    <string name="rx_speed_label">Download Speed:</string>
    <string name="tx_speed_label">Upload Speed:</string>
    <string name="speed_calculating">Calculating...</string>
    <string name="packets_title">Accumulated Traffic</string>
    <string name="rx_packets_label">Accumulated RX:</string>
    <string name="tx_packets_label">Accumulated TX:</string>
    <string name="bridge_ports_title">Bridge Ports</string>
    <string name="port_up">UP</string>
    <string name="port_down">DOWN</string>
    <string name="interface_not_found">Interface Not Found</string>
    <string name="interface_waiting">Waiting for interface creation...</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_start_service">Start Service</string>
    <string name="menu_stop_service">Stop Service</string>
    
    <!-- Settings Activity -->
    <string name="settings_title">Settings</string>
    <string name="interface_name_title">Interface Name</string>
    <string name="interface_name_hint">e.g.: tap0, tun0</string>
    <string name="ap_interfaces_title">AP Interfaces (Wi-Fi Hotspot)</string>
    <string name="ap_interfaces_hint">e.g.: ap0 wlan1 softap0 wlan0</string>
    <string name="ncm_interface_title">NCM Interface (USB Tethering)</string>
    <string name="ncm_interface_hint">e.g.: ncm0, usb0, rndis0</string>
    <string name="ovpn_config_title">OpenVPN Config File</string>
    <string name="ovpn_not_configured">Not configured</string>
    <string name="ovpn_select_file">Select OVPN File</string>
    <string name="ovpn_file_copied">Config file copied successfully</string>
    <string name="ovpn_file_error">Failed to copy config file</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="saved_successfully">Settings Saved</string>
    
    <!-- Script Management -->
    <string name="script_management_title">VPN Bridge Script</string>
    <string name="script_status_label">Status:</string>
    <string name="script_installed">Installed</string>
    <string name="script_not_installed">Not Installed</string>
    <string name="script_running">Running</string>
    <string name="script_stopped">Stopped</string>
    <string name="script_path_label">Path:</string>
    <string name="script_install">Install Script</string>
    <string name="script_uninstall">Uninstall</string>
    <string name="script_run">Run Script</string>
    <string name="script_stop">Stop Script</string>
    <string name="script_view_log">View Log</string>
    <string name="script_clear_log">Clear Log</string>
    <string name="script_installing">Installing...</string>
    <string name="script_running_action">Running...</string>
</resources>